--- a/vision.html
+++ b/vision.html
@@ -9,35 +9,35 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-  <link rel="icon" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/icon.png" type="image/png" />
-  <link rel="stylesheet" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/css/bilawal.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/css/pygments.css" type="text/css" media="screen" />
-  <!--[if IE 8]><link rel="stylesheet" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/css/ie8.css" type="text/css" media="screen, projection"><![endif]-->
-  <!--[if IE 7]><link rel="stylesheet" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/css/ie7.css" type="text/css" media="screen, projection"><![endif]-->
-  <!--[if IE 6]><link rel="stylesheet" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/css/ie6.css" type="text/css" media="screen, projection"><![endif]-->
+  <link rel="icon" href="http://unikexperience.github.com/unikexperience//images/icon.png" type="image/png" />
+  <link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/bilawal.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/pygments.css" type="text/css" media="screen" />
+  <!--[if IE 8]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie8.css" type="text/css" media="screen, projection"><![endif]-->
+  <!--[if IE 7]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie7.css" type="text/css" media="screen, projection"><![endif]-->
+  <!--[if IE 6]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie6.css" type="text/css" media="screen, projection"><![endif]-->
 
   <!-- For non-Retina iPhone, iPod Touch, and Android 2.2+ devices: -->
-  <link rel="apple-touch-icon-precomposed" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/iphone-icon-57x57.png">
+  <link rel="apple-touch-icon-precomposed" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-57x57.png">
 
   <!-- For first-generation iPad: -->
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/iphone-icon-72x72.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-72x72.png">
 
   <!-- For iPhone 4 with high-resolution Retina display: -->
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/iphone-icon-114x114.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-114x114.png">
 
   <!-- No such device exists yet, so if this value is used,
     it means the sizes attribute is ignored: -->
-  <link rel="apple-touch-icon-precomposed" sizes="228x228" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/iphone-icon-228x228.png">
+  <link rel="apple-touch-icon-precomposed" sizes="228x228" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-228x228.png">
 
   <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="Unik Blog" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="Unik Blog" href="http://unikexperience.github.com/unikexperience//feed.xml" />
   <link rel="alternate" type="application/atom+xml" title="Bilawal Hameed" href="http://feeds.feedburner.com/bilawalhameed" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="My Vision"/>
   <meta property="og:type" content="blog"/>
-  <meta property="og:url" content="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/vision.html"/>
-  <meta property="og:image" content="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/images/icon-640x640.png"/>
+  <meta property="og:url" content="http://unikexperience.github.com/unikexperience//vision.html"/>
+  <meta property="og:image" content="http://unikexperience.github.com/unikexperience//images/icon-640x640.png"/>
   <meta property="og:site_name" content="Unik Blog"/>
   <meta property="fb:admins" content="555155596"/>
   <meta property="og:description" content="Unik is full service digital company located in Helsinki & Casablanca"/>
@@ -47,7 +47,7 @@
 
   <header>
     <!-- The logo -->
-    <div><a class="beard" href="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production" target="_self" alt="Back to home"><h1>Unik Blog</h1></a></div>
+    <div><a class="beard" href="http://unikexperience.github.com/unikexperience/" target="_self" alt="Back to home"><h1>Unik Blog</h1></a></div>
   </header>
 
 <div class="contentWrapper">
@@ -81,10 +81,10 @@
   </footer>
 
 <!-- JavaScript -->
-<script type="text/javascript"> var site_url = '/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production';</script>
-<script type="text/javascript" src="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/js/jquery.min.js"></script>
-<script type="text/javascript" src="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/js/ZeroClipboard.js"></script>
-<script type="text/javascript" src="/Users/Ismail/Ressources/Development/Ruby/learn/blog/bilaw.al/_production/js/bilawal.js"></script>
+<script type="text/javascript"> var site_url = 'http://unikexperience.github.com/unikexperience/';</script>
+<script type="text/javascript" src="http://unikexperience.github.com/unikexperience//js/jquery.min.js"></script>
+<script type="text/javascript" src="http://unikexperience.github.com/unikexperience//js/ZeroClipboard.js"></script>
+<script type="text/javascript" src="http://unikexperience.github.com/unikexperience//js/bilawal.js"></script>
 
 <!-- TypeKit -->
 <script type="text/javascript" src="//use.typekit.net/zvi4qyc.js"></script>
@@ -92,6 +92,11 @@
 
 <!-- GoSquared Analytics -->
 <script type="text/javascript">var GoSquared = {acct: "GSN-699065-S"}; (function(w){function gs(){ w._gstc_lt = +new Date; var d = document, g = d.createElement("script"); g.type = "text/javascript"; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s); } w.addEventListener ? w.addEventListener("load", gs, false) : w.attachEvent("onload", gs); })(window); </script>  
+
+<!-- Powered by Jekyll. Last rendered at 2013-03-24 00:27:34 +0000 -->
+</body>
+</html>
+unction gs(){ w._gstc_lt = +new Date; var d = document, g = d.createElement("script"); g.type = "text/javascript"; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s); } w.addEventListener ? w.addEventListener("load", gs, false) : w.attachEvent("onload", gs); })(window); </script>  
 
 <!-- Powered by Jekyll. Last rendered at 2013-03-23 16:08:03 +0000 -->
 </body>
