--- a/first-page.html
+++ b/first-page.html
@@ -1,61 +1,75 @@
-<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
-<head>
-  <title>First page</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>First page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Unik is full service digital company located in Helsinki & Casablanca">
+    <meta name="author" content="Unik">
+    <!-- Open Graph -->
+    <meta property="og:title" content="First page"/>
+    <meta property="og:type" content="blog"/>
+    <meta property="og:url" content="http://unikexperience.github.com/unikexperience//first-page.html"/>
+    <meta property="og:image" content="http://unikexperience.github.com/unikexperience//images/icon-640x640.png"/>
+    <meta property="og:site_name" content="Unik Blog"/>
+    <meta property="fb:admins" content="555155596"/>
+    <meta property="og:description" content="Unik is full service digital company located in Helsinki & Casablanca"/>
+    <!-- Styles -->
+    <link href="http://unikexperience.github.com/unikexperience//css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://unikexperience.github.com/unikexperience//js/html5shiv.js"></script>
+    <![endif]-->
 
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Bilawal Hameed" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- like icon -->
+    <link rel="shortcut icon" href="http://unikexperience.github.com/unikexperience//img/favicon.png">
+  </head>
 
-  <link rel="icon" href="http://unikexperience.github.com/unikexperience//images/icon.png" type="image/png" />
-  <link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/bilawal.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/pygments.css" type="text/css" media="screen" />
-  <!--[if IE 8]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie8.css" type="text/css" media="screen, projection"><![endif]-->
-  <!--[if IE 7]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie7.css" type="text/css" media="screen, projection"><![endif]-->
-  <!--[if IE 6]><link rel="stylesheet" href="http://unikexperience.github.com/unikexperience//css/ie6.css" type="text/css" media="screen, projection"><![endif]-->
+  <body class="front-page">
+    <div class="navbar  navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="http://unikexperience.github.com/unikexperience/">
+            <img src="http://unikexperience.github.com/unikexperience//img/logo.png" alt="Unik Blog" id="logo">
+          </a>
+        </div><!--/container -->
+      </div><!--/navbar-inner-->
+    </div><!--/navbar-->
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <div class="hero-unit">
+            <a href="#" id="close-hero"><i class="icon-remove icon-white"></i></a>
+            <h1>Welcome to <span class="blue-cloud">Unik Blog</span></h1>
+            <h1>First page</h1>
 
-  <!-- For non-Retina iPhone, iPod Touch, and Android 2.2+ devices: -->
-  <link rel="apple-touch-icon-precomposed" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-57x57.png">
-
-  <!-- For first-generation iPad: -->
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-72x72.png">
-
-  <!-- For iPhone 4 with high-resolution Retina display: -->
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-114x114.png">
-
-  <!-- No such device exists yet, so if this value is used,
-    it means the sizes attribute is ignored: -->
-  <link rel="apple-touch-icon-precomposed" sizes="228x228" href="http://unikexperience.github.com/unikexperience//images/iphone-icon-228x228.png">
-
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="Unik Blog" href="http://unikexperience.github.com/unikexperience//feed.xml" />
-  <link rel="alternate" type="application/atom+xml" title="Bilawal Hameed" href="http://feeds.feedburner.com/bilawalhameed" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="First page"/>
-  <meta property="og:type" content="blog"/>
-  <meta property="og:url" content="http://unikexperience.github.com/unikexperience//first-page.html"/>
-  <meta property="og:image" content="http://unikexperience.github.com/unikexperience//images/icon-640x640.png"/>
-  <meta property="og:site_name" content="Unik Blog"/>
-  <meta property="fb:admins" content="555155596"/>
-  <meta property="og:description" content="Unik is full service digital company located in Helsinki & Casablanca"/>
-
-</head>
-<body>
-
-  <header>
-    <!-- The logo -->
-    <div><a class="beard" href="http://unikexperience.github.com/unikexperience/" target="_self" alt="Back to home"><h1>Unik Blog</h1></a></div>
-  </header>
-
-<div class="contentWrapper">
-  <div class="content">
-    <h1>First page</h1>
-
-
-    
+          </div><!--/hero-unit-->
+        </div><!--/span12-->
+      </div><!--/row-->
+    </div><!--/container-->
+    <footer class="clearfix">
+      <div class="container">
+        <ul class="inline pull-left">
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <p class="pull-right"> <i class="icon-cloudswave"></i>Cloudswave. All Rights Reserved. Copyright &copy; 2013</p>
+      </div>
+      <div>&copy; 2013</div>
+    </footer>
+    <!-- Powered by Jekyll. Last rendered at 2013-03-24 00:55:44 +0000 -->
+    <!-- Javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://unikexperience.github.com/unikexperience//js/bootstrap.js"></script>
+    <script src="http://unikexperience.github.com/unikexperience//js/script.js" type="text/javascript"></script>
+  </body>
+</html>
+   
   </div>
 </div>
 
